feat: Update application branding and naming
Renames the application and its associated components to "Autometagen AI by Tabo". This includes updates to the package name, HTML title, meta descriptions, manifest file, and downloaded CSV filenames to reflect the new branding. The visual elements have also been slightly adjusted for consistency.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tabo | Autometagen AI</title>
+    <title>Autometagen AI by Tabo</title>
     
     <!-- PWA & Standalone Meta Tags -->
     <meta name="theme-color" content="#0a0a0a" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="description" content="Tabo Autometagen - Professional stock metadata intelligence. Install as a standalone app." />
+    <meta name="description" content="Autometagen AI by Tabo - Professional metadata intelligence. Install as a standalone app." />
     <link rel="manifest" href="manifest.json" />
     
     <script src="https://cdn.tailwindcss.com"></script>
