--- a/index.html
+++ b/index.html
@@ -23,37 +23,10 @@
         font-family: 'Inter', sans-serif;
       }
 
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #111;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #333;
-        border-radius: 10px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #444;
-      }
-
       .glass {
         background: rgba(20, 20, 20, 0.7);
         backdrop-filter: blur(12px);
         border: 1px solid rgba(255, 255, 255, 0.05);
-      }
-
-      .btn-primary {
-        background: #ffffff;
-        color: #000000;
-        transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-      }
-
-      .btn-primary:hover {
-        background: #e5e5e5;
-        transform: translateY(-1px);
       }
 
       @keyframes shimmer {
@@ -76,7 +49,7 @@
         window.addEventListener('load', () => {
           navigator.serviceWorker.register('sw.js', { scope: './' })
             .then(reg => console.log('SW Registered'))
-            .catch(err => console.log('SW registration skipped (Normal in preview)'));
+            .catch(err => console.log('SW registration skipped'));
         });
       }
     </script>
